[package]
name = "side-futures"
version = "0.1.1"
description = "Send future for execution on the runtime that may be in a different thread"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2018"
license = "0BSD"
keywords = ["future", "send", "spawn"]
documentation = "https://docs.rs/side-futures"
repository = "https://github.com/nazar-pc/side-futures"
readme = "readme.md"

[dependencies]
futures = "0.3.15"

[dev-dependencies]
actix-rt = "2.2.0"

[dev-dependencies.tokio]
features = ["macros", "rt-multi-thread", "time"]
version = "1.6.1"
